--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <img src="images/blog/blog-1.jpg" alt="blog1" class="img-responsive" />
                     <span>May 16 2020</span>
                     <h3>How to Increase Your ROI Through scientific SEM?</h3>
-                    <a href="C:/Users/ratim/Downloads/blog/html-website/gulshan.html">Read More</a>
+                    <a href="https://github.com/Ratim321/land/blob/main/index.html">Read More</a>
                 </div>
                 <!--blog-col-->
                 <div class="blog-col">
