--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Html Website 2020</title>
+    <title>Land Consultancy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--/*font awesome icons*/-->
@@ -47,7 +47,7 @@
                         <a href="#why-choose-us">About US</a>
                         <a href="#expand">Services</a>
                         <a href="#project">Project</a>
-                        <a href="#blog">Blog</a>
+                        <a href="#blog">LAND</a>
                         <a href="#contact">Contact Us</a>
                     </div>
                     <div class="clear"></div>
@@ -55,7 +55,7 @@
                 </div>
                 <!--nav-col-->
                 <div class="cnt-info-col">
-                    <a href="tel:7652000000"><span>Call US:</span>7652000000</a>
+                    <a href="tel:7652000000"><span>Call US:</span>+8801767076722</a>
                 </div>
                 <div class="clear"></div>
                 <!--clear-->
@@ -94,11 +94,11 @@
     <section class="header-bg-parent">
         <div class="header-col1">
             <h5>WELCOME</h5>
-            <h2>Digital Products</h2>
-            <h2 class="typewrite" data-period="1000" data-type='[ "for Business", "to sell online", "for your ideas"]'></h2>
-            <p>Ensuring the best return on investment for your
-                bespoke SEO campaign requirement.</p>
-            <button class="common-btn" type="button">CONTACT TODAY</button>
+            <h2>We offer Land</h2>
+            <h2 class="typewrite" data-period="1000" data-type='[ "Buy", " sell ", "Mortage","Consulation"]'></h2>
+            <h2>Service</h2>
+            <p>Your all kind of land problem will be solved by us</p>
+            <button class="common-btn" type="button">CONTACT US</button>
         </div>
         <!--header-col1-->
         <div class="header-col2">
@@ -114,36 +114,36 @@
     <section id="feature-sec">
         <div class="text-center">
             <h5 class="common-h5">CARE FEATURES</h5>
-            <h2 class="common-h2">Provide Awesome Service With Our Tools</h2>
+            <h2 class="common-h2">Our Services</h2>
         </div>
         <!--text-center-->
         <section class="faeture-col-par">
             <div class="container">
                 <div class="feature-col">
-                    <h3>Discover, Explore the Product</h3>
+                    <h3>Land Buy Papers Check</h3>
                     <img src="images/home-faeture-img/service_img1.png" class="img-responsive" alt="service" />
-                    <h4>Discover, Explore &amp; understanding the product</h4>
+                    <h4>We will help you to &amp; but your land without any hassel</h4>
                     <!--                </div>feature-col-->
                 </div>
                 <!--feature-col-->
                 <div class="feature-col">
-                    <h3>Discover, Explore the Product</h3>
+                    <h3>Land Sell Paper Check</h3>
                     <img src="images/home-faeture-img/service_img2.png" class="img-responsive" alt="service" />
-                    <h4>Discover, Explore &amp; understanding the product</h4>
+                    <h4>We will find people &amp; who will buy your land</h4>
                     <!--                </div>feature-col-->
                 </div>
                 <!--feature-col-->
                 <div class="feature-col">
-                    <h3>Discover, Explore the Product</h3>
+                    <h3>Mortage Paper check</h3>
                     <img src="images/home-faeture-img/service_img3.png" class="img-responsive" alt="service" />
-                    <h4>Discover, Explore &amp; understanding the product</h4>
+                    <h4>we will .......... &amp; understanding the product</h4>
                     <!--                </div>feature-col-->
                 </div>
                 <!--feature-col-->
                 <div class="feature-col">
-                    <h3>Discover, Explore the Product</h3>
+                    <h3>Land Consulation</h3>
                     <img src="images/home-faeture-img/service_img4.png" class="img-responsive" alt="service" />
-                    <h4>Discover, Explore &amp; understanding the product</h4>
+                    <h4>We will give  you consulation &amp; about what to do with your land</h4>
                     <!--                </div>feature-col-->
                 </div>
                 <!--feature-col-->
@@ -155,15 +155,15 @@
             <div class="container">
                 <div class="why-choose-col">
                     <h5 class="common-h5">WHY CHOOSE US</h5>
-                    <h2 class="common-h2">Boosts Your Website Traffic!</h2>
-                    <p>We are passionate about our work. Our designers stay ahead of the curve to provide engaging and user-friendly website designs to make your business stand out. Our developers are committed to maintaining the highest web standards so that your site will withstand the test of time. We care about your business, which is why we work with you.</p>
-                    <button class="common-btn" type="button">DISCOVER MORE</button>
+                    <h2 class="common-h2">Buy and Sell your land Safely</h2>
+                    <p>We are passionate about our work.You will find support from us. We care about your business, which is why we work with you.</p>
+                    <button class="common-btn" type="button">Available land for sell</button>
                 </div>
                 <div class="count-col">
                     <div class="stat">
                         <div class="count-sub-col">
                             <div class="milestone-counter">
-                                <span class="stat-count highlight">100</span>
+                                <span class="stat-count highlight">30</span>
                                 <div class="milestone-details">Happy Customers</div>
                             </div>
                             <!--milestone-counter-->
@@ -190,21 +190,21 @@
                     <div class="stat-info-par">
                         <div class="stat-info-sub-par">
                             <div class="stat-info-div">
-                                <p>Men and women, committed to better protect you around the world.</p>
+                                <p>Number of our Client</p>
                             </div>
                             <!--stat-info-div-->
                         </div>
                         <!--stat-info-sub-par-->
                         <div class="stat-info-sub-par">
                             <div class="stat-info-div">
-                                <p>Men and women, committed to better protect you around the world.</p>
+                                <p>Pending Work</p>
                             </div>
                             <!--stat-info-div-->
                         </div>
                         <!--stat-info-sub-par-->
                         <div class="stat-info-sub-par">
                             <div class="stat-info-div">
-                                <p>Men and women, committed to better protect you around the world.</p>
+                                <p>Number of land sold via our website</p>
                             </div>
                             <!--stat-info-div-->
                         </div>
@@ -221,7 +221,7 @@
         <section id="expand">
             <div class="text-center">
                 <h5 class="common-h5">EXPERINCE</h5>
-                <h2 class="common-h2">Pay for Qualified Traffic</h2>
+                <h2 class="common-h2">Our skill and quality</h2>
             </div>
             <!--text-center-->
             <div class="expand-img-col">
@@ -229,8 +229,8 @@
                     <img src="images/expand-home-img.png" alt="expand" class="img-responsive" />
                     <div class="expand-img-info">
                         <i class="fa fa-mobile-phone"></i>
-                        <h2>Expand Your <br>Digital Presence</h2>
-                        <p>Your app is your tool for better communicatio with your followers.</p>
+                        <h2>Donot waste time <br>Call Us</h2>
+                        <p>We will help to find your best choice land.</p>
                         <a href="#">Get In Touch <i class="fa fa-long-arrow-right"></i></a>
                     </div>
                 </div>
@@ -268,17 +268,17 @@
                 <!--progress-bar-col-->
                 <div class="progress-info-col">
                     <div class="progress-info">
-                        <h3>Creative Approach</h3>
+                        <h3>Paper Protection</h3>
                         <p>Ea pro tibique comprehensam, sed ea verear numquam molestie. Nam te omittam comprehensam.</p>
                     </div>
                     <!--progress-info-->
                     <div class="progress-info">
-                        <h3>Creative Approach</h3>
+                        <h3>Stay to our commitment</h3>
                         <p>Ea pro tibique comprehensam, sed ea verear numquam molestie. Nam te omittam comprehensam.</p>
                     </div>
                     <!--progress-info-->
                     <div class="progress-info">
-                        <h3>Creative Approach</h3>
+                        <h3>Reputation</h3>
                         <p>Ea pro tibique comprehensam, sed ea verear numquam molestie. Nam te omittam comprehensam.</p>
                     </div>
                     <!--progress-info-->
@@ -293,21 +293,21 @@
         <Section id="faq-par">
             <div class="container">
                 <div class="faq-que-col">
-                    <h5 class="common-h5">EXPERINCE</h5>
-                    <h2 class="common-h2">Pay for Qualified Traffic</h2>
+                    <h5 class="common-h5">Q&A</h5>
+                    <h2 class="common-h2">Quick Question And Answer</h2>
                     <div id="faq-accordion">
 
 
-                        <h3>Why do we use it ?</h3>
+                        <h3>Why should you trust us ?</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
 
-                        <h3>Who we use it ?</h3>
+                        <h3>Is there is any chance of fraud ?</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
 
-                        <h3>can we use it ?</h3>
+                        <h3>What is the gurantty of our work ?</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
 
-                        <h3>What Three Solutions are ?</h3>
+                        <h3>Is this website is only about land?</h3>
                         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
 
                         <h3>Do or Not ?</h3>
@@ -321,7 +321,7 @@
                         <img src="images/home-faq.png" alt="faq" class="img-responsive" />
                         <div class="faq-img-info">
                             <i class="fa fa-lightbulb-o"></i>
-                            <h2>Have a project in mind? <br>Let’s get to work.</h2>
+                            <h2>Do you have a land that need to be sell? <br>Just call us</h2>
                             <p>Find out how it works and ask any <br> questions you may have.</p>
                             <a href="#">Get In Touch <i class="fa fa-long-arrow-right"></i></a>
                         </div>
@@ -337,8 +337,8 @@
 
         <Section id="project">
             <div class="text-center">
-                <h5 class="common-h5">FEATURED PROJECTS</h5>
-                <h2 class="common-h2">Our Case Studies</h2>
+                <h5 class="common-h5">FEATURED LAND</h5>
+                <h2 class="common-h2">Our latest land listed for sell</h2>
             </div>
             <div class="owl-carousel owl-theme">
                 <div class="item">
@@ -401,7 +401,7 @@
 
         <section id="price-table">
             <div class="text-center">
-                <h5 class="common-h5">PRICING PLAN</h5>
+                <h5 class="common-h5">Consulation Fee</h5>
                 <h2 class="common-h2">The Best Solutions for Our Clients</h2>
             </div>
             <div class="basic-price-col">
@@ -475,8 +475,8 @@
 
         <section id="blog">
             <div class="text-center">
-                <h5 class="common-h5">BLOG</h5>
-                <h2 class="common-h2">Read Our Lates News</h2>
+                <h5 class="common-h5">Listed Land</h5>
+                <h2 class="common-h2">Latest Land</h2>
             </div>
             <div class="container">
                 <div class="blog-col">
@@ -540,7 +540,7 @@
                     <ul>
                         <li>Home</li>
                         <li>About Us</li>
-                        <li>Services</li>
+                        <li >Services</li>
                         <li>Portfolio</li>
                         <li>Blog</li>
                         <li>Contact Us</li>
@@ -549,14 +549,14 @@
                 <!--footer-col-->
                 <div class="footer-col">
                     <h3>Contact Us</h3>
-                    <p><i class="fa fa-envelope-o"></i> <a href="mailto:demo@gmail.com">demo@gmail.com</a></p>
-                    <p><i class="fa fa-mobile-phone"></i> <a href="tel:9855000000">9855000000</a></p>
-                    <p><i class="fa fa-map-o"></i> <span>27 Division St, New York, NY 10002, US</span></p>
+                    <p><i class="fa fa-envelope-o"></i> <a href="mailto:demo@gmail.com">kaziruhul@gmail.com</a></p>
+                    <p><i class="fa fa-mobile-phone"></i> <a href="tel:9855000000">+8801767076722</a></p>
+                    <p><i class="fa fa-map-o"></i> <span>Borisal</span></p>
                 </div>
                 <!--footer-col-->
                 <div class="clear"></div>
                 <hr class="footer-hr">
-                <p class="copyright-footer">&copy; 2020 — Websblog. All Rights Reserved.</p>
+                <p class="copyright-footer">&copy; 2022 — LAND. All Rights Reserved.</p>
             </div>
         </footer>
 
