--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#why-choose-us">About US</a>
                         <a href="#expand">Services</a>
                         <a href="#project">Project</a>
-                        <a href="#blog">LAND</a>
+                        <a href="#blog">Land</a>
                         <a href="#contact">Contact Us</a>
                     </div>
                     <div class="clear"></div>
@@ -86,9 +86,9 @@
         <a href="#why-choose-us">About US</a>
         <a href="#expand">Services</a>
         <a href="#project">Project</a>
-        <a href="#blog">Blog</a>
+        <a href="#blog">Land</a>
         <a href="#contact">Contact Us</a>
-        <a href="tel:7652000000">7652000000</a>
+        <a href="tel:7652000000">+8801767076722</a>
     </div>
 
     <section class="header-bg-parent">
